left-align marketplace header titles (bug 790326)

--- a/media/css/mkt/header.less
+++ b/media/css/mkt/header.less
@@ -23,8 +23,7 @@
 }
 
 #top {
-    margin: 0 auto;
-    text-align: center;
+    text-align: left;
 }
 
 .home #top {
